--- a/NewSelenium/pom.xml
+++ b/NewSelenium/pom.xml
@@ -78,7 +78,6 @@
     <groupId>org.testng</groupId>
     <artifactId>testng</artifactId>
     <version>7.7.1</version>
-    <scope>test</scope>
 </dependency>
 
 
@@ -90,10 +89,12 @@
     <artifactId>json-simple</artifactId>
     <version>1.1.1</version>
 </dependency>
-
-
-
-
+      <dependency>
+          <groupId>org.testng</groupId>
+          <artifactId>testng</artifactId>
+          <version>7.10.2</version>
+          <scope>compile</scope>
+      </dependency>
 
 
   </dependencies>
