--- a/NewSelenium/pom.xml
+++ b/NewSelenium/pom.xml
@@ -73,14 +73,23 @@
 
 
 
-<!-- https://mvnrepository.com/artifact/org.testng/testng -->
-<dependency>
-    <groupId>org.testng</groupId>
-    <artifactId>testng</artifactId>
-    <version>7.7.1</version>
-</dependency>
+<!--&lt;!&ndash; https://mvnrepository.com/artifact/org.testng/testng &ndash;&gt;-->
+<!--<dependency>-->
+<!--    <groupId>org.testng</groupId>-->
+<!--    <artifactId>testng</artifactId>-->
+<!--    <version>7.7.1</version>-->
+<!--</dependency>-->
 
-
+      <dependency>
+          <groupId>com.zebrunner</groupId>
+          <artifactId>agent-core</artifactId>
+          <version>1.9.8</version>
+      </dependency>
+      <dependency>
+          <groupId>com.zebrunner</groupId>
+          <artifactId>agent-testng</artifactId>
+          <version>1.9.8</version>
+      </dependency>
 
 
 <!-- https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple -->
