--- a/NewSelenium/src/main/resources/zeburner.properties
+++ b/NewSelenium/src/main/resources/zeburner.properties
@@ -1,4 +1,4 @@
 reporting.enabled=true
 reporting.project-key=DEMO
-reporting.server.hostname=https://your-zebrunner-instance.com
+reporting.server.hostname=https://amareshkumarpanigrahi.zebrunner.com/projects/DEF/test-cases
 reporting.server.access-token=<your-access-token>
